Attempt to fix current lists div on iphone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -272,7 +272,7 @@ body{
     order: 2;
     border: none;
     padding: 5px 0 15px;
-    max-height: 200px;
+    max-height: 220px;
 }
 .current-lists .lists-list-title {
    margin-bottom: 0;
